--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -1,326 +1,8 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
-  box-sizing: border-box;
+body {
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-input[type=text],
-select,
-textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-input[type=date] {
-  width: 20%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-label {
-  padding: 12px 12px 12px 0;
-  display: inline-block;
-}
-
-button[type=submit] {
-  background-color: rgb(0, 123, 255);
-  border: none;
-  border-radius: 8px;
-  color: white;
-  padding: 10px 24px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-.container {
-  border-radius: 5px;
-  padding: 20px;
-}
-
-.col-25 {
-  float: left;
-  width: 25%;
-  margin-top: 6px;
-}
-
-.col-75 {
-  float: left;
-  width: 75%;
-  margin-top: 6px;
-}
-
-.row::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-#table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-#table td,
-#table th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-#table tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-#table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: white;
-  color: #000;
-}
-
-.button {
-  border: none;
-  border-radius: 8px;
-  color: white;
-  padding: 9px 24px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin: 4px 2px;
-}
-
-.button-primary {
-  background-color: rgb(0, 123, 255);
-}
-
-.button-success {
-  background-color: rgb(23, 166, 7);
-}
-
-.button-danger {
-  background-color: rgb(255, 50, 71);
-}
-
-.pagination a {
-  color: rgb(0, 0, 0);
-  float: left;
-  padding: 8px 16px;
-  text-decoration: none;
-  transition: background-color .3s;
-  margin-bottom: 10px;
-}
-
-.pagination a.active {
-  background-color: dodgerblue;
-  color: white;
-}
-
-.pagecontainer {
-  display: flex;
-  flex-direction: column;
-}
-
-.pagination {
-  margin-bottom: 10px;
-}
-
-.button-container {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.button-container .btn {
-  margin-right: 10px;
-}
-
-.pagination a:hover:not(.active) {
-  background-color: #ddd;
-}
-
-/* styles.css */
-
-/* Form Styles */
-
-.form-group {
- 
-  flex-direction: row;
-  align-items: left;
-  margin-bottom: 20px;
-}
-
-.form-group label {
-  width: 50%;
-
-}
-
-.form-group input[type="text"],
-.form-group input[type="number"],
-.form-group input[type="date"],
-.form-group select {
-  width: 80%;
-  padding: 15px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 5px;
-}
-
-.form-group input[type="submit"],
-.button {
-  background-color: #04AA6D;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-
-/* Button Styles */
-
-.button {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.button-primary {
-  background-color: #333;
-}
-
-.button-secondary {
-  background-color: #777;
-}
-
-.button-primary:hover,
-.button-secondary:hover {
-  background-color: #555;
-}
-
-/* Responsive form */
-
-
-/* zebra stripped */
-* {
-  box-sizing: border-box;
-}
-
-.table {
-  border-collapse: collapse;
-  width: 100%;
-  border: 1px solid #ddd;
-}
-
-.table th .table td {
-  text-align: left;
-  padding: 32px;
-}
-
-.table th {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 120px;
-  text-align: left;
-  background-color: #04AA6D;
-  color: white;
-}
-
-.table tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-.table tr:hover {
-  background-color: #ddd;
-}
-
-.table tr.even {
-  background-color: #777575d4;
-}
-
-.table tr.odd {
-  background-color: #f5f7f7;
-}
-
-.btn {
-  border: 1px;
-  /* Remove borders */
-  color: white;
-  /* Add a text color */
-  padding: 8px 20px;
-  /* Add some padding */
-  cursor: pointer;
-  /* Add a pointer cursor on mouse-over */
-}
-
-.success {
-  background-color: #04AA6D;
-}
-
-/* Green */
-.success:hover {
-  background-color: #46a049;
-}
-
-.info {
-  background-color: #2196F3;
-}
-
-/* Blue */
-.info:hover {
-  background: #0b7dda;
-}
-
-.warning {
-  background-color: #ff9800;
-}
-
-/* Orange */
-.warning:hover {
-  background: #e68a00;
-}
-
-.danger {
-  background-color: #f44336;
-}
-
-/* Red */
-.danger:hover {
-  background: #da190b;
-}
-
-.default {
-  background-color: #e7e7e7;
-  color: black;
-}
-
-/* Gray */
-.default:hover {
-  background: #ddd;
-}
-
-
-
-/* form  */
-.input {
-  width: 200px;
-  height: 100px;
-  padding: 10px;
-  border: 1px solid black;
-  margin: 20px;
+a {
+  color: #00B7FF;
 }
