--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -5,139 +5,182 @@
   <title>
     <%= title %>
   </title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/style.css">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/6ea2cb925f.js" crossorigin="anonymous"></script>
+    <style>
+      .sort-icon {
+        margin-left: 5px;
+      }
+      .sort-icon.asc:before {
+        content: "\f0de";
+      }
+      .sort-icon.desc:before {
+        content: "\f0dd";
+      }
+    </style>
 </head>
 
 <body>
-  <h1>BREAD (Browse, Read, Edit, Add, Delete)</h1>
-
-  <h2>Filter</h2>
-
-  <form action="" method="GET" class="inline-form">
-    <input type="hidden" name="page" value="1">
-  
-    <div class="form-group">
-   
-  
-      <div class="checkbox-group">
-        <div class="filter-group">
-          <input type="checkbox" id="idCheckbox" name="idCheckbox" <% if (query.id) { %>checked<% } %>>
-          <label for="idCheckbox">ID:</label>
-          <input type="text" id="id" name="id" placeholder="ID" value="<%= query.id %>">
+  <div class="container">
+    <h1>BREADS (Browse, Read, Update, Delete, Sort)</h1>
+    <h4>Filters</h4>
+    <form action="/" method="get">
+      <input type="hidden" name="page" value="1">
+      <div class="row mb-3">
+        <label for="inputId" class="col-sm-4 col-form-label">
+          <input type="checkbox" name="checkId" id="checkId" <%= query.checkId ? "checked" : "" %> >
+          ID
+        </label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="id" name="id" value="<%= query.id %>">
         </div>
-  
-        <div class="filter-group">
-          <input type="checkbox" id="stringCheckbox" name="stringCheckbox" <% if (query.string) { %>checked<% } %>>
-          <label for="stringCheckbox">String:</label>
-          <input type="text" id="string" name="string" placeholder="String" value="<%= query.string %>">
+      </div>
+      <div class="row mb-3">
+        <label for="inputStr" class="col-sm-4 col-form-label">
+          <input type="checkbox" name="checkStr" id="checkStr" <%= query.checkStr ? "checked" : "" %>>
+          String
+        </label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="string" name="string" value="<%= query.string %>">
         </div>
-  
-        <div class="filter-group">
-          <input type="checkbox" id="integerCheckbox" name="integerCheckbox" <% if (query.integer) { %>checked<% } %>>
-          <label for="integerCheckbox">Integer:</label>
-          <input type="number" id="integer" name="integer" placeholder="Integer" value="<%= query.integer %>">
+      </div>
+      <div class="row mb-3">
+        <label for="inputInt" class="col-sm-4 col-form-label">
+          <input type="checkbox" name="checkInt" id="checkInt" <%= query.checkInt ? "checked" : "" %>>
+          Integer
+        </label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="integer" name="integer" value="<%= query.integer %>">
         </div>
-  
-        <div class="filter-group">
-          <input type="checkbox" id="floatCheckbox" name="floatCheckbox" <% if (query.float) { %>checked<% } %>>
-          <label for="floatCheckbox">Float:</label>
-          <input type="number" id="float" name="float" step="any" placeholder="Float" value="<%= query.float %>">
+      </div>
+      <div class="row mb-3">
+        <label for="inputFloat" class="col-sm-4 col-form-label">
+          <input type="checkbox" name="checkFloat" id="checkFloat" <%= query.checkFloat ? "checked" : ""%>>
+          Float
+        </label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="float" name="float" value="<%= query.float %>">
         </div>
-  
-        <div class="filter-group">
-          <input type="checkbox" id="startDateCheckbox" name="startDateCheckbox" <% if (query.startDate) { %>checked<% } %>>
-          <label for="startDateCheckbox">Date:</label>
-          <input type="date" id="startDate" name="startDate" placeholder="Start Date" value="<%= query.startDate %>">
-          <label>to</label>
-          <input type="date" id="endDate" name="endDate" placeholder="End Date" value="<%= query.endDate %>">
+      </div>
+      <div class="row mb-3">
+        <label for="inputDate" class="col-sm-4 col-form-label">
+          <input type="checkbox" name="checkDate" id="checkDate" <%= query.checkDate ? "checked" : "" %>>
+          Date
+        </label>
+        <div class="col-sm-4">
+          <input type="date" class="form-control" id="startDate" name="startDate" value="<%= query.startDate %>">
+          to
+          <input type="date" class="form-control" id="endDate" name="endDate" value="<%= query.endDate %>">
         </div>
-  
-        <div class="filter-group">
-          <input type="checkbox" id="booleanCheckbox" name="booleanCheckbox" <% if (query.boolean) { %>checked<% } %>>
-          <label for="booleanCheckbox">Boolean:</label>
-          <select id="boolean" name="boolean">
-            <option value="">Choose the boolean...</option>
-            <option value="true" <% if (query.boolean === 'true') { %>selected<% } %>>True</option>
-            <option value="false" <% if (query.boolean === 'false') { %>selected<% } %>>False</option>
+      </div>
+      <div class="row mb-3">
+        <label for="inputBol" class="col-sm-4 col-form-label">
+          <input type="checkbox" name="checkBol" id="checkBol" <%= query.checkBol ? "checked" : ""%>>
+          Boolean
+        </label>
+        <div class="col-sm-8">
+          <select name="boolean" id="boolean" class="form-select" >
+            <option>Choose the boolean</option>
+            <option value="true" <%= query.boolean == "true" ? "selected" : "" %>>True</option>
+            <option value="false" <%= query.boolean == "false"? "selected" : "" %>>False</option>
           </select>
         </div>
       </div>
-    </div>
-  <button type="submit" class="btn btn-primary">Search</button>
-  <a href="/" class="btn danger">RESET</a>
-  </form>
-
-
-  <div class="table">
-    <table id="table">
-      <tr>
-        <th>ID</th>
-        <th>String</th>
-        <th>Integer</th>
-        <th>Float</th>
-        <th>Date</th>
-        <th>Boolean</th>
-        <th>Actions</th>
-      </tr>
-
-      <% data.forEach((entry)=> { %>
-        <tr class="<%= index % 2 === 0 ? 'even' : 'odd' %>">
-          <td>
-            <%= entry.id %>
-          </td>
-          <td>
-            <%= entry.string %>
-          </td>
-          <td>
-            <%= entry.integer %>
-          </td>
-          <td>
-            <%= entry.float %>
-          </td>
-          <td>
-            <%= entry.date %>
-          </td>
-          <td>
-            <%= entry.boolean === 'false' ? 'false' : 'true' %>
-          </td>
-          <td>
-            <form action="/edit/<%= entry.id %>" method="GET" class="inline-form">
-              <button type="" class="button button-success">Edit</button>
-            </form>
-            <form action="/delete/<%= entry.id %>" method="POST" class="inline-form">
-              <button type="submit" class="btn danger">Delete</button>
-            </form>
-          </td>
+      <button type="submit" class="btn btn-primary">Search</button>
+      <a href="/" class="btn btn-secondary">Back</a>
+    </form>
+  </div>
+  <br>
+  <div class="container">
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr align="center">
+          <th>
+            ID
+            <a href="<%= url %>&sortby=id&sortorder=<%= sortDir === 'asc' && sortBy === 'id' ? 'desc' : 'asc' %>">
+              <span class="fa <%= sortDir === 'asc' && sortBy === 'id' ? 'fa-sort-up' : sortDir === 'desc' && sortBy === 'id' ? 'fa-sort-down' : 'fa-sort' %>"></span>
+            </a>
+          </th>
+          <th>
+            String
+            <a href="<%= url %>&sortby=string&sortorder=<%= sortDir === 'asc' && sortBy === 'string' ? 'desc' : 'asc' %>">
+              <span class="fa <%= sortDir === 'asc' && sortBy === 'string' ? 'fa-sort-up' : sortDir === 'desc' && sortBy === 'string' ? 'fa-sort-down' : 'fa-sort' %>"></span>
+            </a>
+          </th>
+          <th>
+            Integer
+            <a href="<%= url %>&sortby=integer&sortorder=<%= sortDir === 'asc' && sortBy === 'integer' ? 'desc' : 'asc' %>">
+              <span class="fa <%= sortDir === 'asc' && sortBy === 'integer' ? 'fa-sort-up' : sortDir === 'desc' && sortBy === 'integer' ? 'fa-sort-down' : 'fa-sort' %>"></span>
+            </a>
+          </th>
+          <th>
+            Float
+            <a href="<%= url %>&sortby=float&sortorder=<%= sortDir === 'asc' && sortBy === 'float' ? 'desc' : 'asc' %>">
+              <span class="fa <%= sortDir === 'asc' && sortBy === 'float' ? 'fa-sort-up' : sortDir === 'desc' && sortBy === 'float' ? 'fa-sort-down' : 'fa-sort' %>"></span>
+            </a>
+          </th>
+          <th>
+            Date
+            <a href="<%= url %>&sortby=date&sortorder=<%= sortDir === 'asc' && sortBy === 'date' ? 'desc' : 'asc' %>">
+              <span class="fa <%= sortDir === 'asc' && sortBy === 'date' ? 'fa-sort-up' : sortDir === 'desc' && sortBy === 'date' ? 'fa-sort-down' : 'fa-sort' %>"></span>
+            </a>
+          </th>
+          <th>
+            Boolean
+            <a href="<%= url %>&sortby=boolean&sortorder=<%= sortDir === 'asc' && sortBy === 'boolean' ? 'desc' : 'asc' %>">
+              <span class="fa <%= sortDir === 'asc' && sortBy === 'boolean' ? 'fa-sort-up' : sortDir === 'desc' && sortBy === 'boolean' ? 'fa-sort-down' : 'fa-sort' %>"></span>
+            </a>
+          </th>
+          <th>Action</th>
         </tr>
-        <% }); %>
+      </thead>
+      <tbody>
+        <% data.forEach(item=> { %>
+        <tr align="center">
+              <td><%= item.id %></td>
+              <td><%= item.string%></td>
+              <td><%= item.integer%></td>
+              <td><%= item.float%></td>
+              <td><%= moment(item.date).format('YYYY-MM-DD')%></td>
+              <td><%= item.boolean%></td>
+              <td>
+                <a href="/edit/<%= item.id %>" class="btn btn-success btn-sm">Edit</a>
+                <a href="/delete/<%= item.id %>" class="btn btn-danger btn-sm">Delete</a>
+              </td>
+            </tr>
+        <% }) %>
+      </tbody>
     </table>
   </div>
-
-  <br>
-  <div class="pagination">
-    <!-- HANDLING adalah kondisi untuk mengatasi bug -->
-
-    <% if (page > 1) { %>
-    <a href="/?page=<%=parseInt(page) - 1%>">Previous</a>
-    <% } %>
-    <% for( let i = 1; i <= pages; i++ ) { %>
-      <a href="<%= url.replace(`page=${page}`, `page=${i}`) %>" class="<%= page == i ? 'active' : '' %>" ><%=i %></a>
-    <% } %>
-    <% if (page < pages) { %>
-      <a href="/?page=<%=parseInt(page) + 1%>">Next</a>
-    <% } %>
+  <div class="container">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <!-- error handling previous page -->
+        <% if(page > 1) { %>
+          <li class="page-item">
+            <a class="page-link" href="<%= url.replace(`page=${parseInt(page)}`, `page=${parseInt(page) - 1}`) %>">
+            Previous</a>
+          </li>
+        <% } %>
+        <% for( let i = 1; i <= pages; i++ ) { %>
+          <li class="page-item">
+            <a href="<%= url.replace(`page=${page}`, `page=${i}`) %>" class="page-link <%= page == i ? 'active' : '' %>" ><%=i %></a>
+          </li>
+        <% } %>
+        <!-- error handling next page -->
+        <% if (page < pages) { %>
+          <li class="page-item">
+            <a class="page-link" href="<%= url.replace(`page=${parseInt(page)}`, `page=${parseInt(page) + 1}`) %>">
+              Next
+            </a>
+          </li>
+        <% } %>
+      </ul>
+    </nav>
+    <a href="/add" class="btn btn-primary">Add</a>
   </div>
-  <br>
-
-  <br><br>
-
-  <div class="button-container">
-    <ul style="list-style-type: none;" class="button-list">
-      <li><a href="/add" class="btn info">Add Data</a></li>
-    </ul>
-  </div>
-
 </body>
 
 </html>
